--- a/client/medical-patients/package.json
+++ b/client/medical-patients/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "vite-plugin-require": "^1.1.11",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
